<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                       xmlns:tools="http://schemas.android.com/tools"
                                       android:layout_width="match_parent"
                                       android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/iv_podcast_detail_dismiss"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/close_podcast_detail_image_description"
            android:src="@drawable/ic_baseline_expand_more_24px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_podcast_detail_name"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gutter"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingStart="@dimen/default_gutter"
            android:paddingEnd="@dimen/default_gutter"
            android:scrollHorizontally="true"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_podcast_detail_dismiss"
            tools:text="@string/podcast_name"/>

        <ImageView
            android:id="@+id/iv_podcast_detail_image"
            android:layout_width="348dp"
            android:layout_height="284dp"
            android:layout_marginStart="@dimen/default_gutter"
            android:layout_marginTop="@dimen/xxlarge_gutter"
            android:layout_marginEnd="@dimen/default_gutter"
            android:contentDescription="@null"
            android:src="@drawable/ic_baseline_play_arrow_24px"
            app:layout_constraintBottom_toTopOf="@+id/tv_podcast_detail_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_podcast_detail_name"/>
        <TextView
            android:id="@+id/tv_podcast_detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_gutter"
            android:paddingStart="@dimen/large_gutter"
            android:paddingEnd="@dimen/large_gutter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_podcast_detail_image"
            tools:text="@string/lorem_ipsum"/>


        <ImageView
            android:id="@+id/iv_podcast_detail_follow"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/default_gutter"
            android:layout_marginBottom="@dimen/default_gutter"
            android:contentDescription="@string/follow_podcast_image_description"
            android:src="@drawable/ic_baseline_star_border_24px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_podcast_detail_description"/>

        <ImageView
            android:id="@+id/iv_podcast_detail_share"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:layout_marginStart="@dimen/default_gutter"
            android:layout_marginTop="@dimen/default_gutter"
            android:layout_marginEnd="@dimen/default_gutter"
            android:layout_marginBottom="@dimen/default_gutter"
            android:contentDescription="@string/share_podcast_image_description"
            android:src="@drawable/ic_baseline_share_24px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_podcast_detail_download"
            app:layout_constraintStart_toEndOf="@+id/iv_podcast_detail_follow"
            app:layout_constraintTop_toBottomOf="@+id/tv_podcast_detail_description"/>


        <ImageView
            android:id="@+id/iv_podcast_detail_download"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:layout_marginTop="@dimen/default_gutter"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="@dimen/default_gutter"
            android:contentDescription="@string/download_episode_image_description"
            android:src="@drawable/ic_baseline_cloud_download_24px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_podcast_detail_description"/>

        <ProgressBar
            android:id="@+id/pb_download_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:visibility="invisible"
            android:layout_marginTop="@dimen/default_gutter"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="@dimen/default_gutter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_podcast_detail_description"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>